--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
 DB_CNN=mongodb+srv://USER_PRUEBA:root123@pruebaangular.culyw.mongodb.net/hospitalDB
+JWT_SECRET=ad5yY09IZIIxx-oLmUstarMaOss
 GOOGLE_ID=642097759422-pd24eppctotpcq9hik1seifck9qaq9ua.apps.googleusercontent.com
 GOOGLE_SECRET=d5yY09IZIIxx-oLmUstarMaO
